Changes for Perl extension SDL-Tutorial-3DWorld

0.25 Thu 20 Dec 2010
	- The mouse scroll wheel now controls the distance away from the
	  camera that the selector box will float.
	- Adding a global texture cache. No noticable impact as we don't
	  do much reuse of textures in the current world.
	- Adding a global model cache. Because of the 121 toilet plungers
	  in our scene this one change reduced startup time by 75%, total
	  memory consumption by 7 meg (15%) and improved framerate by 5%.

0.24 Thu 29 Dec 2010
	- Disable solid object display order optimisation, as I suspect it
	  that the Perl cost to sort them is bigger than the cost of just
	  brute force drawing all of them in hardware.
	- Added neato grid select tool

0.23 Wed 29 Dec 2010
	- Sort solid objects from nearest to farthest to increase the
	  chance that OpenGL only needs to depth test far objects and won't
	  need to do any colour/texture/light work at all.
	- Added support for explicit normals in meshes and model files
	- Moved Moved SDL::Tutorial::3DWorld::Asset::Mesh up a directory,
	  as it didn't really make sense having it in the Asset namespace.
	- Added F3 toggle to enable/disable the console/FPS (which costs
	  a remarkably large amount for what it does).

0.22 Wed 29 Dec 2010
	- The bounding box actor now also displays a traditional
	  red/green/blue axis on the original of each actor.
	- Flying camera renamed as the God camera.
	- All textures now wrap by default removing the need for the
	  Tile class at all.
	- In light of it's expanded role, renamed ::Actor::Box to the
	  more general sounding ::Actor::Debug.
	- We don't need to clear the color buffer when we have a skybox.
	  Clearing only the depth buffer will have the exact same effect.
	- Adding support for a ->{hidden} property on actors that allows
	  them to intentionally make themselves invisible.
	- Left CTRL now provides negative lift to the God-mode camera.
	  i.e. It makes you go vertically downwards.